--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "@tanstack/react-query": "^4.36.1",
+    "@thirdweb-dev/react": "^4.4.8",
+    "@thirdweb-dev/sdk": "^4.0.38",
+    "@thirdweb-dev/chains": "^0.1.75",
+    "ethers": "^5.7.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
