--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "infinite-ideas",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node --no-warnings server.js",
+    "health-check": "node health-check.js",
+    "deploy": "node netlify-deploy.js",
+    "check-deployment": "node deployment-check.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^4.36.1",
+    "@thirdweb-dev/chains": "^0.1.75",
     "@thirdweb-dev/react": "^4.4.8",
     "@thirdweb-dev/sdk": "^4.0.38",
-    "@thirdweb-dev/chains": "^0.1.75",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
+    "express": "^4.18.3",
+    "groq-sdk": "^0.3.1",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.1",
-    "groq-sdk": "^0.3.1"
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
