--- a/netlify.toml
+++ b/netlify.toml
@@ -15,9 +15,39 @@
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
+  force = true
 
-# SPA fallback
+# Add direct access to health check endpoints
+[[redirects]]
+  from = "/health"
+  to = "/.netlify/functions/api/health"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/create-checkout-session"
+  to = "/.netlify/functions/api/create-checkout-session"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/verify-purchase/*"
+  to = "/.netlify/functions/api/verify-purchase/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/webhook"
+  to = "/.netlify/functions/api/webhook"
+  status = 200
+  force = true
+
+# SPA fallback - this should be the last redirect
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+# Build plugin settings
+[build.environment]
+  NODE_OPTIONS = "--max_old_space_size=4096"
