--- a/netlify.toml
+++ b/netlify.toml
@@ -17,6 +17,13 @@
   status = 200
   force = true
 
+# Direct access to Netlify functions
+[[redirects]]
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+  force = true
+
 # Add direct access to health check endpoints
 [[redirects]]
   from = "/health"
