--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.3",
     "serverless-http": "^3.2.0",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "stripe": "^14.17.0"
   }
 }
